cluster-cd/apps/bitty/media/stash/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: &name stash
    app.kubernetes.io/instance: *name
    app.kubernetes.io/component: *name
    app.kubernetes.io/part-of: *name
    k8s-app: *name
  name: *name
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: *name
      app.kubernetes.io/instance: *name
      app.kubernentes.io/component: *name
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: *name
        app.kubernetes.io/instance: *name
        app.kubernentes.io/component: *name
    spec:
      containers:
        - name: stash
          image: stashapp/stash:v0.26.2@sha256:7e71c17a2ce69305889bb3305b057929066c767037b2415a354f2b7dbeff6013
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 4Gi
              gpu.intel.com/i915: 1
            requests:
              memory: 4Gi
              gpu.intel.com/i915: 1
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 9999
          volumeMounts:
            - mountPath: /root/.stash
              name: config
            - mountPath: /media
              name: media
            - mountPath: /generated
              name: generated
            - mountPath: /cache
              name: cache
            - name: metadata
              mountPath: /metadata
            - name: blobs
              mountPath: /blobs
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: stash
        - name: media
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media/.homework/library/
        - name: generated
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media/.homework/generated/
        - name: metadata
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media/.homework/metadata/
        - name: blobs
          nfs:
            server: ${NFS_SERVER}
            path: /mnt/rusty/media/.homework/blobs/
        - name: cache
          emptyDir: {}
