cluster-cd/apps/bitty/media/stash/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &name stash
  labels:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9999
      protocol: TCP
  selector:
    app.kubernetes.io/name: *name
    app.kubernetes.io/instance: *name
